--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-
- *.iml;*.idea;*.gitignore;*.sh;*.classpath;*.project;*.settings;target;
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
